# vella

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  mkdocs.yml  pyproject.toml
.claude/skills/document/: SKILL.md
.github/workflows/: ci.yml  docs-deploy.yml  docs-regen.yml
docs/: api.md  architecture.md  index.md
docs-root/: index.html
docs/catalogs/: public_api.md
docs/tutorials/: authoring-a-node-type.md
schema/: core.json
scripts/: docs_packages.py  export_schema.py  generate_catalogs.py
src/vella/core/: __init__.py  _typevars.py  _uuid7.py  base.py  edge.py  embedding.py  errors.py  history.py  integration.py  node.py  parse.py  references.py  state.py  tooling.py
tests/: test_model.py  test_parse.py  test_parse_fuzz.py  test_schema_compat.py
